--- a/Sistem Keuangan Daarul Jannah/templates/tabelpegawai.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tabelpegawai.html
@@ -72,7 +72,7 @@
                             <!-- <a href="{{ url_for('riwayat_pembayaran', nis = pegawai['nis']) }}" class="btn-1 fungsi" title="Riwayat Pembayaran">
                                 <i class="fi fi-sr-ballot"></i>
                             </a>
-                            <a href="{{ url_for('pembayaran_spp', nis = pegawai['nis']) }}" class="btn-2 fungsi" title="Pembayaran SPP">
+                            <a href="{{ url_for('pembayaran_siswa', nis = pegawai['nis']) }}" class="btn-2 fungsi" title="Pembayaran SPP">
                                 <i class="fi fi-sr-money-check-edit"></i>
                             </a> -->
                         </td>
