--- a/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
@@ -72,7 +72,7 @@
                             <a href="{{ url_for('riwayat_pembayaran', nis = siswa_tk['nis']) }}" class="btn-1 fungsi" title="Riwayat Pembayaran">
                                 <i class="fi fi-sr-ballot"></i>
                             </a>
-                            <a href="{{ url_for('pembayaran_spp', nis = siswa_tk['nis']) }}" class="btn-2 fungsi" title="Pembayaran SPP">
+                            <a href="{{ url_for('pembayaran_siswa', nis = siswa_tk['nis']) }}" class="btn-2 fungsi" title="Pembayaran SPP">
                                 <i class="fi fi-sr-money-check-edit"></i>
                             </a>
                         </td>
@@ -95,7 +95,7 @@
                             <a href="{{ url_for('riwayat_pembayaran', nis = siswa_sd['nis']) }}" class="btn-1 fungsi" title="Riwayat Pembayaran">
                                 <i class="fi fi-sr-ballot"></i>
                             </a>
-                            <a href="{{ url_for('pembayaran_spp', nis = siswa_sd['nis']) }}" class="btn-2 fungsi" title="Pembayaran SPP">
+                            <a href="{{ url_for('pembayaran_siswa', nis = siswa_sd['nis']) }}" class="btn-2 fungsi" title="Pembayaran SPP">
                                 <i class="fi fi-sr-money-check-edit"></i>
                             </a>
                         </td>
@@ -118,7 +118,7 @@
                             <a href="{{ url_for('riwayat_pembayaran', nis = siswa_smp['nis']) }}" class="btn-1 fungsi" title="Riwayat Pembayaran">
                                 <i class="fi fi-sr-ballot"></i>
                             </a>
-                            <a href="{{ url_for('pembayaran_spp', nis = siswa_smp['nis']) }}" class="btn-2 fungsi" title="Pembayaran SPP">
+                            <a href="{{ url_for('pembayaran_siswa', nis = siswa_smp['nis']) }}" class="btn-2 fungsi" title="Pembayaran SPP">
                                 <i class="fi fi-sr-money-check-edit"></i>
                             </a>
                         </td>
