--- a/Sistem Keuangan Daarul Jannah/templates/pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah/templates/pembayaran.html
@@ -66,7 +66,7 @@
                                     <div class="detail-tagihan">
                                         <div style="margin-bottom:10px">
                                             <p>Periode Pembayaran :</p>
-                                            <select id="periode" name="periode_bulan">
+                                            <select id="periode" name="periode_bulan" required>
                                                 <option disabled selected>Pilih Bulan</option>
                                                 <option value="Januari">Januari</option>
                                                 <option value="Februari">Februari</option>
