--- a/Sistem Keuangan Daarul Jannah/static/CSS/base.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/base.css
@@ -373,6 +373,11 @@ table{
     border-collapse: collapse;
 }
 
+.min-h{
+    min-height: 20vh;
+    margin-bottom: 5vh;
+}
+
 .shadow{
     box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
     -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
