--- a/Sistem Keuangan Daarul Jannah/templates/pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah/templates/pembayaran.html
@@ -64,7 +64,7 @@
                                 <h4 class="text" style="margin-left:10px">Input Data Rincian Tagihan </h4>
                                 <div class="card-nosh" style="margin-left:10px">
                                     <div class="detail-tagihan">
-                                        <div style="margin-bottom:10px">
+                                        <div>
                                             <p>Periode Pembayaran :</p>
                                             <select id="periode" name="periode_bulan" required>
                                                 <option disabled selected>Pilih Bulan</option>
@@ -87,7 +87,7 @@
                                                 <option>{{session['year']}}/{{session['year']+1}} Genap</option>
                                             </select>
                                         </div>
-                                        <div >
+                                        <div class="tagihan">
                                             <p>Pilih Tagihan :</p>
                                             <ul>
                                                 <li>
