--- a/Sistem Keuangan Daarul Jannah/templates/tabelpegawai.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tabelpegawai.html
@@ -43,7 +43,7 @@
             </div>
             
             <div class="table" id="data_pegawai">
-                <table >
+                <table class="shadow coll">
                     <tr>
                         <th>NIP</th>
                         <th>Nama Pegawai</th>
