--- a/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
@@ -45,7 +45,7 @@
             </div>
             
             <div class="table" id="data_siswa">
-                <table >
+                <table class="shadow coll">
                     <tr>
                         <th>NIS</th>
                         <th>Nama Siswa/i</th>
