--- a/Sistem Keuangan Daarul Jannah/static/CSS/base.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/base.css
@@ -40,14 +40,16 @@ select,input{
 }
 
 .content{
-    min-height: calc(100vh - 20vh);
+    /* min-height: calc(100vh - 150px); */
+    min-height: 75vh;
 }
 
 .footer { 
     /* grid-area: 5 / 2 / 6 / 6;   */
+
     text-align: center;
     color: #ccc;
-    margin: 0;
+    padding-top: 5vh;
     font-size: 1vw;
 }
 
