--- a/Sistem Keuangan Daarul Jannah/templates/pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah/templates/pembayaran.html
@@ -6,6 +6,7 @@
         {% block head %}
             <!-- <title>Riwayat Pembayaran - Sistem Pembayaran DJ</title> -->
             <script>document.title = "Pembayaran - Sistem Pembayaran DJ"</script>
+            <script src="{{ url_for('static', filename='Javascript/pre_input_data.js') }}"></script>
         {% endblock %}
     </head>
 
@@ -67,19 +68,19 @@
                                         <div>
                                             <p>Periode Pembayaran :</p>
                                             <select id="periode" name="periode_bulan" required>
-                                                <option disabled selected>Pilih Bulan</option>
-                                                <option value="Januari">Januari</option>
-                                                <option value="Februari">Februari</option>
-                                                <option value="Maret">Maret</option>
-                                                <option value="April">April</option>
-                                                <option value="Mei">Mei</option>
-                                                <option value="Juni">Juni</option>
-                                                <option value="Juli">Juli</option>
-                                                <option value="Agustus">Agustus</option>
-                                                <option value="September">September</option>
-                                                <option value="Oktober">Oktober</option>
-                                                <option value="November">November</option>
-                                                <option value="Desember">Desember</option>
+                                                <option disabled selected id="default">Pilih Bulan</option>
+                                                <option value="Januari" id="1">Januari</option>
+                                                <option value="Februari" id="2">Februari</option>
+                                                <option value="Maret" id="3">Maret</option>
+                                                <option value="April" id="4">April</option>
+                                                <option value="Mei" id="5">Mei</option>
+                                                <option value="Juni" id="6">Juni</option>
+                                                <option value="Juli" id="7">Juli</option>
+                                                <option value="Agustus" id="8">Agustus</option>
+                                                <option value="September" id="9">September</option>
+                                                <option value="Oktober" id="10">Oktober</option>
+                                                <option value="November" id="11">November</option>
+                                                <option value="Desember" id="12">Desember</option>
                                             </select>
                                             <select id="tahun_ajaran" name="periode_ta" required>
                                                 <option disabled selected>Pilih Tahun Ajaran</option>
